<?xml version="1.0"?>
<package>
  <name>egm</name>
  <version>1.0.0</version>
  <description>Using a Xbox360 Joystick under ROS to interface to externally guided motion (egm) for RobotStudio</description>
  <maintainer email="Shuyangchen01@gmail.com">Shuyang Chen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
